--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+::-webkit-scrollbar {
+    width: 8px; /* 设置滚动条宽度 */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* 设置滚动条的颜色 */
+    border-radius: 4px; /* 设置滚动条的圆角 */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* 鼠标悬停时滚动条的颜色 */
+}
+
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* 设置滚动条轨道的背景颜色 */
+    border-radius: 4px; /* 设置滚动条轨道的圆角 */
+}
